--- a/main.html
+++ b/main.html
@@ -7,6 +7,14 @@
 </head>
 
 <body>
+	<div class="container">
+		 <img src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+	  <div class="hero">
+		   <h1>Welcome to my Pinterest clone</h1>
+		  <p>Discover new inspiration and save your favourite ideas</p>
+	  <button class="btn">Explore now</button>
+	  </div>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
