--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 	  <div class="hero">
 		   <h1>Welcome to my Pinterest clone</h1>
 		  <p>Discover new inspiration and save your favourite ideas</p>
-	  <button class="btn">Explore now</button>
+	 <button><a>Explore now </a></button>
 	  </div>
 	</div>
 	<!-- the entire body must be written by student -->
